src/app/components/partials/header/header.component.css
header {
  position: relative;
  background: white;
  padding: 0;
  border-bottom: 1px solid #ccc;
}

a {
  color: #af1313;
}

a:hover {
  background: #e72929;
  color: white;
  cursor: pointer;
}

.container {
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

a.logo {
  font-weight: bold;
  font-size: 1.2rem;
  padding: 1rem;
  color: #e72929;
}

a.logo:hover,
a.cart-icon:hover {
 background-color: white;
 color: #e72929;
}

ul {
  display: flex;
  list-style-type: none;
  margin: 0;
}

ul a {
  padding: 1rem;
  display: inline-block;
}

a span {
  background: #ff4d4d;
  color: white;
  padding: 0.1rem 0.45rem;
  border-radius: 100rem;
  font-size: 0.9rem;
}

.menu-container{
  position: relative;
}

.menu {
  position: absolute;
  z-index: 1;
  background: whitesmoke;
  display: none;
}

.menu-container:hover .menu {
  display: block;
}

.menu a {
  width: 100%;
  min-width: 8rem;
}

